feature: add backend and frontend version
